--- a/blog.html
+++ b/blog.html
@@ -97,6 +97,33 @@
   <img src="assets/images/produtividade-real.jpg" class="blog-image">
   <p>Como usar melhor o tempo sem se esgotar.</p>
 </a>
+    <a href="blog/sistema-de-organizacao.html" class="blog-card" data-category="gestao">
+  <span class="blog-tag">Gestão</span>
+  <h4>Organização não falha</h4>
+  <img src="assets/images/sistema-organizacao.jpg" class="blog-image">
+  <p>O problema não é você — é o sistema.</p>
+</a>
+
+<a href="blog/falsa-produtividade.html" class="blog-card" data-category="produtividade">
+  <span class="blog-tag">Produtividade</span>
+  <h4>A falsa produtividade</h4>
+  <img src="assets/images/falsa-produtividade.jpg" class="blog-image">
+  <p>Quando fazer muito não significa avançar.</p>
+</a>
+
+<a href="blog/organizacao-emocional.html" class="blog-card" data-category="organizacao">
+  <span class="blog-tag">Organização</span>
+  <h4>Organização emocional</h4>
+  <img src="assets/images/organizacao-emocional.jpg" class="blog-image">
+  <p>Mente organizada, rotina mais leve.</p>
+</a>
+
+<a href="blog/comportamento-financeiro.html" class="blog-card" data-category="financas">
+  <span class="blog-tag">Finanças</span>
+  <h4>Comportamento financeiro</h4>
+  <img src="assets/images/comportamento-financeiro.jpg" class="blog-image">
+  <p>Consciência antes de planilha.</p>
+</a>
 
   </div>
 </section>
