--- a/blog.html
+++ b/blog.html
@@ -125,6 +125,51 @@
   <p>Consciência antes de planilha.</p>
 </a>
 
+    <!-- ROTINA -->
+<a href="blog/rotina-cheia-sem-avancar.html" class="blog-card" data-category="rotina">
+  <span class="blog-tag">Rotina</span>
+  <h4>Quando sua rotina parece cheia, mas você não avança</h4>
+  <img src="assets/images/rotina-cheia.jpg" class="blog-image">
+  <p>Por que estar ocupade não significa estar progredindo.</p>
+</a>
+
+<!-- FINANÇAS -->
+<a href="blog/controlar-gastos-nao-resolve.html" class="blog-card" data-category="financas">
+  <span class="blog-tag">Finanças</span>
+  <h4>Por que controlar gastos não resolve sua vida financeira</h4>
+  <img src="assets/images/controlar-gastos.jpg" class="blog-image">
+  <p>Organização financeira vai além de anotar despesas.</p>
+</a>
+
+<!-- PRODUTIVIDADE -->
+<a href="blog/produtividade-nao-e-fazer-mais.html" class="blog-card" data-category="produtividade">
+  <span class="blog-tag">Produtividade</span>
+  <h4>Ser produtive não é fazer mais — é desperdiçar menos energia</h4>
+  <img src="assets/images/produtividade-energia.jpg" class="blog-image">
+  <p>Como trabalhar melhor sem se esgotar.</p>
+</a>
+
+<a href="blog/fazendo-muito-mas-improdutive.html" class="blog-card" data-category="produtividade">
+  <span class="blog-tag">Produtividade</span>
+  <h4>Por que você se sente improdutive mesmo fazendo muito</h4>
+  <img src="assets/images/improdutive.jpg" class="blog-image">
+  <p>O problema não é falta de esforço — é excesso de dispersão.</p>
+</a>
+
+<!-- GESTÃO -->
+<a href="blog/gestao-e-liberdade.html" class="blog-card" data-category="gestao">
+  <span class="blog-tag">Gestão</span>
+  <h4>Gestão não é burocracia — é liberdade</h4>
+  <img src="assets/images/gestao-liberdade.jpg" class="blog-image">
+  <p>Por que organizar é o que mais traz autonomia.</p>
+</a>
+
+<a href="blog/crescimento-sem-gestao.html" class="blog-card" data-category="gestao">
+  <span class="blog-tag">Gestão</span>
+  <h4>Sem gestão, todo crescimento vira caos</h4>
+  <img src="assets/images/crescimento-caos.jpg" class="blog-image">
+  <p>Crescer sem estrutura cobra um preço alto.</p>
+</a>
   </div>
 </section>
 
