--- a/blog.html
+++ b/blog.html
@@ -91,12 +91,13 @@
   <p>Clareza, estrutura e decisões melhores no dia a dia.</p>
 </a>
 
-<a href="blog/produtividade-real.html" class="blog-card" data-category="produtividade">
+<a href="blog/produtividade-nao-e-fazer-mais.html" class="blog-card" data-category="produtividade">
   <span class="blog-tag">Produtividade</span>
-  <h4>Produtividade não é fazer mais</h4>
-  <img src="assets/images/produtividade-real.jpg" class="blog-image">
-  <p>Como usar melhor o tempo sem se esgotar.</p>
+  <h4>Ser produtivo(a) não é fazer mais — é desperdiçar menos energia</h4>
+  <img src="assets/images/produtividade-energia.jpg" class="blog-image">
+  <p>Como trabalhar melhor sem se esgotar.</p>
 </a>
+    
     <a href="blog/sistema-de-organizacao.html" class="blog-card" data-category="gestao">
   <span class="blog-tag">Gestão</span>
   <h4>Organização não falha</h4>
