--- a/assets/images/calendario-2026.html
+++ b/assets/images/calendario-2026.html
@@ -30,9 +30,9 @@
       <li>✔ Layout minimalista para imprimir</li>
     </ul>
 
-    <a href="materiais/calendario-2026.pdf" class="btn-download" target="_blank">
-      📥 Baixar Calendário 2026 gratuitamente
-    </a>
+   <a href="materiais/calendario-2026.pdf" download class="btn-download">
+  📥 Baixar Calendário 2026 gratuitamente
+</a>
 
     <p class="material-note">
       Material gratuito criado por ME – Gestão na Prática.
