--- a/assets/images/calendario-2026.html
+++ b/assets/images/calendario-2026.html
@@ -30,7 +30,7 @@
       <li>✔ Layout minimalista para imprimir</li>
     </ul>
 
-   <a href="../materiais/calendario-2026.pdf" download class="btn-download">
+  <a href="/megestaonapratica-web/materiais/calendario-2026.pdf" download class="btn-download">
   📥 Baixar Calendário 2026 gratuitamente
 </a>
 
