--- a/assets/images/calendario-2026.html
+++ b/assets/images/calendario-2026.html
@@ -30,7 +30,8 @@
       <li>✔ Layout minimalista para imprimir</li>
     </ul>
 
-  <a href="/megestaonapratica-web/materiais/calendario-2026.pdf" download class="btn-download">
+ <a href="https://drive.google.com/uc?export=download&id=1vmX2WXtCbDn_qsTx8Y76UaLSRU1WqTXS" 
+   class="btn-download" target="_blank">
   📥 Baixar Calendário 2026 gratuitamente
 </a>
 
