--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <a href="#servicos">Serviços</a>
         <a href="#como-funciona">Como funciona</a>
         <a href="#blog">Blog</a>
-        <a href="calendario-2026.html">Calendário 2026</a>
+       <a href="assets/calendario-2026.html">Calendário 2026</a>
         <a href="#depoimentos">Depoimentos</a>
         <a href="#contato" class="primary">Contato</a>
       </nav>
@@ -676,6 +676,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
