--- a/assets/calendario-2026.html
+++ b/assets/calendario-2026.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Calendário 2026 | ME – Gestão na Prática</title>
 
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="../css/styles.css">
 
 <meta name="description" content="Baixe gratuitamente o Calendário 2026 do ME – Gestão na Prática e organize seus compromissos, metas e rotina com mais clareza.">
 
