--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>Blog | ME - Gestão na Prática</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -30,7 +29,7 @@
   <p style="max-width:720px">
     Conteúdos sobre organização, rotina, finanças e gestão leve para a vida real.
   </p>
-  
+
 <div class="blog-filters">
   <button class="filter-btn active" data-filter="all">Todos</button>
   <button class="filter-btn" data-filter="organizacao">Organização</button>
@@ -40,76 +39,28 @@
   <button class="filter-btn" data-filter="gestao">Gestão</button>
 </div>
 
-  <div class="blog-grid">
+<div class="blog-grid">
 
-    <a href="blog/rotina-sem-sobrecarga.html" class="blog-card" data-category="organizacao">
-      <span class="blog-tag">Organização</span>
-      <h4>Como organizar sua rotina sem se sentir sobrecarregado(a)</h4>
-      <img src="assets/images/rotina-sem-sobrecarga.jpg" class="blog-image">
-      <p>Pequenos ajustes que aliviam sua rotina e aumentam seus resultados.</p>
-    </a>
+<!-- ORGANIZAÇÃO -->
+<a href="blog/rotina-sem-sobrecarga.html" class="blog-card" data-category="organizacao">
+  <span class="blog-tag">Organização</span>
+  <h4>Como organizar sua rotina sem se sentir sobrecarregado(a)</h4>
+  <img src="assets/images/rotina-sem-sobrecarga.jpg" class="blog-image">
+  <p>Pequenos ajustes que aliviam sua rotina e aumentam seus resultados.</p>
+</a>
 
-    <a href="blog/financas-leves.html" class="blog-card" data-category="financas">
-      <span class="blog-tag">Finanças</span>
-      <h4>Finanças leves: como organizar seu dinheiro</h4>
-      <img src="assets/images/financas-leves.jpg" class="blog-image">
-      <p>Organize seu dinheiro sem culpa, medo ou complicação.</p>
-    </a>
+<a href="blog/rotina-sabotando.html" class="blog-card" data-category="organizacao">
+  <span class="blog-tag">Organização</span>
+  <h4>A rotina que parece produtiva, mas te sabota</h4>
+  <img src="assets/images/rotina-sabotando.jpg" class="blog-image">
+  <p>Quando estar ocupado(a) não significa avançar.</p>
+</a>
 
-    <a href="blog/voce-nao-esta-atrasada.html" class="blog-card" data-category="rotina">
-      <span class="blog-tag">Rotina</span>
-      <h4>Você não está atrasado(a), está sobrecarregado(a)</h4>
-      <img src="assets/images/voce-nao-esta-atrasada.jpg" class="blog-image">
-      <p>Nem sempre o problema é falta de disciplina.</p>
-    </a>
-
-    <a href="blog/rotina-sabotando.html" class="blog-card" data-category="organizacao">
-      <span class="blog-tag">Organização</span>
-      <h4>A rotina que parece produtiva, mas te sabota</h4>
-      <img src="assets/images/rotina-sabotando.jpg" class="blog-image">
-      <p>Quando estar ocupado(a) não significa avançar.</p>
-    </a>
-
-    <a href="blog/por-que-o-dinheiro-nao-sobra.html" class="blog-card" data-category="financas">
-      <span class="blog-tag">Finanças</span>
-      <h4>Por que você trabalha tanto e o dinheiro não sobra?</h4>
-       <img src="assets/images/por-que-o-dinheiro-nao-sobra.jpg" class="blog-image">
-      <p>Quando o problema não é falta de clientes, é falta de clareza.</p>
-    </a>
-
-    <a href="blog/planejar-semana.html" class="blog-card" data-category="organizacao">
+<a href="blog/planejar-semana.html" class="blog-card" data-category="organizacao">
   <span class="blog-tag">Organização</span>
   <h4>Como planejar a semana sem se frustrar</h4>
   <img src="assets/images/planejar-semana.jpg" class="blog-image">
   <p>Planejamento realista, flexível e sem cobrança excessiva.</p>
-</a>
-
-    <a href="blog/gestao-na-pratica.html" class="blog-card" data-category="gestao">
-  <span class="blog-tag">Gestão</span>
-  <h4>O que é gestão na prática</h4>
-  <img src="assets/images/gestao-na-pratica.jpg" class="blog-image">
-  <p>Clareza, estrutura e decisões melhores no dia a dia.</p>
-</a>
-
-<a href="blog/produtividade-nao-e-fazer-mais.html" class="blog-card" data-category="produtividade">
-  <span class="blog-tag">Produtividade</span>
-  <h4>Ser produtivo(a) não é fazer mais — é desperdiçar menos energia</h4>
-  <img src="assets/images/produtividade-energia.jpg" class="blog-image">
-  <p>Como trabalhar melhor sem se esgotar.</p>
-</a>
-    
-    <a href="blog/sistema-de-organizacao.html" class="blog-card" data-category="gestao">
-  <span class="blog-tag">Gestão</span>
-  <h4>Organização não falha</h4>
-  <img src="assets/images/sistema-organizacao.jpg" class="blog-image">
-  <p>O problema não é você — é o sistema.</p>
-</a>
-
-<a href="blog/falsa-produtividade.html" class="blog-card" data-category="produtividade">
-  <span class="blog-tag">Produtividade</span>
-  <h4>A falsa produtividade</h4>
-  <img src="assets/images/falsa-produtividade.jpg" class="blog-image">
-  <p>Quando fazer muito não significa avançar.</p>
 </a>
 
 <a href="blog/organizacao-emocional.html" class="blog-card" data-category="organizacao">
@@ -119,22 +70,36 @@
   <p>Mente organizada, rotina mais leve.</p>
 </a>
 
-<a href="blog/comportamento-financeiro.html" class="blog-card" data-category="financas">
-  <span class="blog-tag">Finanças</span>
-  <h4>Comportamento financeiro</h4>
-  <img src="assets/images/comportamento-financeiro.jpg" class="blog-image">
-  <p>Consciência antes de planilha.</p>
+<!-- ROTINA -->
+<a href="blog/voce-nao-esta-atrasada.html" class="blog-card" data-category="rotina">
+  <span class="blog-tag">Rotina</span>
+  <h4>Você não está atrasado(a), está sobrecarregado(a)</h4>
+  <img src="assets/images/voce-nao-esta-atrasada.jpg" class="blog-image">
+  <p>Nem sempre o problema é falta de disciplina.</p>
 </a>
 
-    <!-- ROTINA -->
 <a href="blog/rotina-cheia-sem-avancar.html" class="blog-card" data-category="rotina">
   <span class="blog-tag">Rotina</span>
   <h4>Quando sua rotina parece cheia, mas você não avança</h4>
   <img src="assets/images/rotina-cheia.jpg" class="blog-image">
-  <p>Por que estar ocupade não significa estar progredindo.</p>
+  <p>Estar ocupada não é o mesmo que progredir.</p>
 </a>
 
 <!-- FINANÇAS -->
+<a href="blog/financas-leves.html" class="blog-card" data-category="financas">
+  <span class="blog-tag">Finanças</span>
+  <h4>Finanças leves: como organizar seu dinheiro</h4>
+  <img src="assets/images/financas-leves.jpg" class="blog-image">
+  <p>Organize seu dinheiro sem culpa, medo ou complicação.</p>
+</a>
+
+<a href="blog/por-que-o-dinheiro-nao-sobra.html" class="blog-card" data-category="financas">
+  <span class="blog-tag">Finanças</span>
+  <h4>Por que você trabalha tanto e o dinheiro não sobra?</h4>
+  <img src="assets/images/por-que-o-dinheiro-nao-sobra.jpg" class="blog-image">
+  <p>Quando o problema não é falta de clientes, é falta de clareza.</p>
+</a>
+
 <a href="blog/controlar-gastos-nao-resolve.html" class="blog-card" data-category="financas">
   <span class="blog-tag">Finanças</span>
   <h4>Por que controlar gastos não resolve sua vida financeira</h4>
@@ -142,27 +107,55 @@
   <p>Organização financeira vai além de anotar despesas.</p>
 </a>
 
+<a href="blog/comportamento-financeiro.html" class="blog-card" data-category="financas">
+  <span class="blog-tag">Finanças</span>
+  <h4>Organização financeira começa pelo comportamento</h4>
+  <img src="assets/images/comportamento-financeiro.jpg" class="blog-image">
+  <p>Antes da planilha, vem a consciência.</p>
+</a>
+
 <!-- PRODUTIVIDADE -->
 <a href="blog/produtividade-nao-e-fazer-mais.html" class="blog-card" data-category="produtividade">
   <span class="blog-tag">Produtividade</span>
-  <h4>Ser produtive não é fazer mais — é desperdiçar menos energia</h4>
+  <h4>Ser produtivo(a) não é fazer mais — é desperdiçar menos energia</h4>
   <img src="assets/images/produtividade-energia.jpg" class="blog-image">
   <p>Como trabalhar melhor sem se esgotar.</p>
 </a>
 
+<a href="blog/falsa-produtividade.html" class="blog-card" data-category="produtividade">
+  <span class="blog-tag">Produtividade</span>
+  <h4>A falsa produtividade</h4>
+  <img src="assets/images/falsa-produtividade.jpg" class="blog-image">
+  <p>Quando fazer muito não significa avançar.</p>
+</a>
+
 <a href="blog/fazendo-muito-mas-improdutive.html" class="blog-card" data-category="produtividade">
   <span class="blog-tag">Produtividade</span>
-  <h4>Por que você se sente improdutive mesmo fazendo muito</h4>
+  <h4>Por que você se sente improdutiva mesmo fazendo muito</h4>
   <img src="assets/images/improdutive.jpg" class="blog-image">
   <p>O problema não é falta de esforço — é excesso de dispersão.</p>
 </a>
 
 <!-- GESTÃO -->
+<a href="blog/gestao-na-pratica.html" class="blog-card" data-category="gestao">
+  <span class="blog-tag">Gestão</span>
+  <h4>O que é gestão na prática</h4>
+  <img src="assets/images/gestao-na-pratica.jpg" class="blog-image">
+  <p>Clareza, estrutura e decisões melhores no dia a dia.</p>
+</a>
+
+<a href="blog/sistema-de-organizacao.html" class="blog-card" data-category="gestao">
+  <span class="blog-tag">Gestão</span>
+  <h4>Organização não falha</h4>
+  <img src="assets/images/sistema-organizacao.jpg" class="blog-image">
+  <p>O problema não é você — é o sistema.</p>
+</a>
+
 <a href="blog/gestao-e-liberdade.html" class="blog-card" data-category="gestao">
   <span class="blog-tag">Gestão</span>
   <h4>Gestão não é burocracia — é liberdade</h4>
   <img src="assets/images/gestao-liberdade.jpg" class="blog-image">
-  <p>Por que organizar é o que mais traz autonomia.</p>
+  <p>Organizar é o que mais traz autonomia.</p>
 </a>
 
 <a href="blog/crescimento-sem-gestao.html" class="blog-card" data-category="gestao">
@@ -171,7 +164,8 @@
   <img src="assets/images/crescimento-caos.jpg" class="blog-image">
   <p>Crescer sem estrutura cobra um preço alto.</p>
 </a>
-  </div>
+
+</div>
 </section>
 
 <footer style="margin-top:40px;text-align:center">
@@ -183,35 +177,32 @@
 <script>
 document.getElementById("ano").textContent = new Date().getFullYear();
 </script>
+
 <script>
 document.addEventListener("DOMContentLoaded", function () {
-
   const filterButtons = document.querySelectorAll(".filter-btn");
   const posts = document.querySelectorAll(".blog-card");
 
   filterButtons.forEach(button => {
     button.addEventListener("click", function () {
-
-      // remove active de todos
       filterButtons.forEach(btn => btn.classList.remove("active"));
       this.classList.add("active");
 
       const filter = this.dataset.filter;
 
       posts.forEach(post => {
-        const category = post.dataset.category;
-
-        if (filter === "all" || category === filter) {
-          post.style.display = "flex";
-        } else {
-          post.style.display = "none";
-        }
+        post.style.display = (filter === "all" || post.dataset.category === filter)
+          ? "flex"
+          : "none";
       });
-
     });
   });
-
 });
+</script>
+
+</body>
+</html>
+
 </script>
 
 </body>
